compile and execute javafx